 
*[#1139] Spaces at the begin or end of a data object name will cause an exception
**removed trim() statements in query building to handle intended spaces in file names.  Note that there may be a bug for collection names with embedded spaces, this is ignored in the JUNit tests for CollectionAOImpl, and that issue has been routed to iRODS for now.
 
*[#1211] Re: [iROD-Chat:9536] jargon mangling UTF-8 characters
**completed wiring codebase into jargon.properties settings

*[#1358] hbm2ddl maven build errors
**remove htm2ddl maven build step, not really used, caused maven build errors.  We might revisit this later with the new conveyor framework.

*[#1371] 3.3.2 error with cache using griffin
**Handle GSI login in caching when using Griffin so that zone name can be null.  This will instead cache on host name

*[#1372] continuation not propagated for specific query
**Added continuation code to specific query

*[#1373] alias lookup failing on specific query
**Added additional lookup tests for specific queries that contained special characters (returns and spaces) in the query string
**Added InvalidParameterException and checks for duplicate aliases
**Propagate additional message information in ErrorScanner and IRODSCommand processing
**Clarified alias versus sql in various specific query AO services
 
==Features==

*[#1264] [iROD-Chat:9666] Referencing Data Objects
**Added findById() methods to DataObjectAO and CollectionAO

*[#1250] jargon/idrop performance testing and optimization for 3.3.2
**Added cache of server properties in IRODSSession to avoid repreated queries for same host/zone

*[#902] IP - ils -A performance fix
**Add zoneHint capability to specific query
**Implement optional specific query solution for ils which does not expand group membership

*[#1392] remove icommands from remaining unit tests
**Remove wrapped icommands from remaining unit tests

*[#1392] Resource AVU methods to add and remove metadata from resources


